--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "joi-password-complexity": "^2.0.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.0"
+    "mongoose": "^5.4.0",
+    "nodemon": "^1.18.9"
   }
 }
